<resources>
    <string name="app_name">晴果智慧校园-教师端</string>
    <string name="titlename">标题名称</string>
    <string name="s1">松开结束录音</string>
    <string name="s2">按住并说话</string>
    <string name="tv_ss_dialog_msg">正在提交</string>
    <string name="tv_ss_dialog_msg2">正在提交</string>
    <string name="t1">请输入手机号码</string>
    <string name="t2">请输入登录密码</string>
    <string name="t3">请选中晴果智慧校园用户协议</string>
    <string name="t4">请输入验证码</string>
    <string name="t5">获取验证码</string>
    <string name="t6">请输入注册密码</string>
    <string name="t7">请输入注册手机号</string>
    <string name="t8">作业发布成功</string>
    <string name="exit">再按一次退出应用</string>
    <string name="t9">暂无校车信息</string>
    <string name="text22">缓存清理成功</string>
    <string name="t10">正在清理缓存</string>
    <string name="login">正在登录中...</string>
    <string name="home1">首页</string>
    <string name="home5">我的</string>
    <string name="q1">审批中</string>
    <string name="q2">已审批</string>
    <string name="q3">已驳回</string>
    <string name="tt">天</string>
    <string name="msgtitle">是否发送 %s 体征报告给家长？</string>
    <string name="mes1">请输入通知消息内容</string>
    <string name="titmsg">是否拨打 %s 家长的电话？</string>
    <string name="toasteroot">授权失败</string>
    <string name="toast1">请允许获取拨打电话授权</string>
    <string name="msgpost">你有一条新的消息请注意查收</string>
    <string name="ll1">人觉得很赞</string>
    <string name="ll2">条评论</string>
    <string name="h1">%s 发布</string>
    <string name="h2">已有 <![CDATA[<font color=\'#0077FF\'>%s</font>]]> 人提交</string>
    <string name="h3">已批改 <![CDATA[<font color=\'#FFC107\'>%s/%s</font>]]> 人作业</string>
    <string name="toast12"><![CDATA[本作业已有 <font color=\'#0077FF\'>%s</font> 人提交，<font color=\'#FFC107\'>%s</font> 人的作业未批改]]></string>
    <string name="per1">%s人觉得很赞</string>
    <string name="itetmsg">%s人看过</string>
    <string name="page5_t">关于我们</string>
    <string name="page5_t2">反馈建议</string>
    <string name="page5_t3">清理缓存</string>
    <string name="page5_t5">暂不支持更新头像</string>
    <string name="leave_title">请假列表</string>
    <string name="dialog_msg1">添加驳回原因</string>
    <string name="leave2_top">已同意本次申请</string>
    <string name="e1">编辑评语短语</string>
    <string name="e3">提交</string>
    <string name="e2">取消</string>
    <string name="pl"><![CDATA[给 <font color=\'#0077FF\'>%s</font> 同学作业的评语]]></string>
    <string name="p2"><![CDATA[给 <font color=\'#0077FF\'>%s</font> 同学的评语]]></string>
    <string name="plogin" translatable="false">我已阅读并同意《<a href="http://www.abc1.com">晴果智慧校园用户协议</a>》和《<a href="http://www.abc2.com">晴果智慧校园隐私权协议</a>》</string>
    <string name="err">没有更多数据了</string>
    <string name="tss">检测到你未安装微信</string>
    <string name="ta1">教师端注册</string>
    <string name="takl">评语已发布</string>
    <string name="pingyu1">请输入评语标题</string>
    <string name="pingyu2">请输入评语内容</string>
    <string name="pingyu3">值得表扬</string>
    <string name="pingyu4">仍需努力</string>
    <string name="pingyu5">发布评语</string>
    <string name="pingyu6">今日评语发布成功</string>
    <string name="pingyu7">请选择今日平价内容</string>
    <string name="d1">点赞成功</string>
    <string name="d2">取消点赞</string>
    <string name="toaswt">删除成功</string>
    <string name="toast2">评论发表成功</string>
    <string name="taa">输入帖子内容</string>
    <string name="messagemsg">发布成功</string>
    <string name="msg1">请输入评价内容</string>
    <string name="toast3">请选择需要评价的学生</string>
    <string name="toast4">请选择需要评价的学生</string>
    <string name="pingyu_msg">给%s的评语</string>
    <string name="toast">给%s同学的评语</string>
    <string name="m1">请输入作业标题内容</string>
    <string name="m2">请输入标题内容</string>
    <string name="m3">确定发布吗？</string>
    <string name="m4">作业发布后将无法进行更改与删除</string>
    <string name="m5">检查一下</string>
    <string name="m6">发布</string>
    <string name="ta12">请选择学生再操作</string>
    <string name="tas">天赋极佳，但需要努力才能去兑现。</string>
    <string name="t_ome">退出登录</string>
    <string name="fment4">更换头像</string>
    <string name="temt1">老师</string>
    <string name="loging_msg">登录失败请求超时</string>
    <string name="fee1">反馈建议</string>
    <string name="fee2">标题</string>
    <string name="fee3">请输入标题</string>
    <string name="fee4">您的联系方式</string>
    <string name="fee5">请输入手机号或微信</string>
    <string name="fee6">您遇到的问题或建议</string>
    <string name="fee7">请输入...</string>
    <string name="fee8">上传图片</string>
    <string name="fee9">提交</string>
    <string name="fee11">请输入标题</string>
    <string name="fee12">请输入你的联方式</string>
    <string name="fee13">请输入你的问题或建议</string>
    <string name="feel14">十分感谢您的本次反馈，您的任何建议都以便于我们持续为您提供更加良好的使用体验。我们将在收到您的反馈后及时讨论并可能与您取得联系，感谢您的支持！</string>
    <string name="tas1">批改作业</string>
    <string name="taa1">添加评语</string>
    <string name="tass2">保存</string>
    <string name="taa3">取消</string>
    <string name="subuess">添加成功</string>
    <string name="e5">保存</string>
    <string name="toask1">编辑成功</string>
    <string name="toas2">编辑失败</string>
    <string name="suttok">设置成功</string>
    <string name="toaa1">编辑%s的考勤为</string>
    <string name="tass1">请输入正确手机号码</string>
    <string name="toasth1">待处理</string>
    <string name="toasth2">已通过</string>
    <string name="toasth3">已驳回</string>
    <string name="toasth4">%s 至 %s（共%s天）</string>
    <string name="toasth5"> 的请假申请</string>
    <string name="toasth6">请假事由：</string>
    <string name="toasth7">请假类型：</string>
    <string name="toasth8">申请时长：</string>
    <string name="toasth10">所在班级：</string>
    <string name="toasth11">待处理</string>
    <string name="tm1">到校人数</string>
    <string name="tm2">学生健康</string>
    <string name="tm3">缺勤人数</string>
    <string name="tm4">请假人数</string>
    <string name="edite1">请输入编辑内容</string>
    <string name="js2">拒绝审批</string>
    <string name="js1">等待审批</string>
    <string name="js3">审批成功</string>
    <string name="js4">请输入驳回原因</string>
    <string name="js5">驳回成功</string>
    <string name="toast5">暂无班级数据</string>
    <string name="toast6">未获取到位置信息失败</string>
    <string name="fbpy1">发布评语</string>
    <string name="ls1">未绑定相关设备</string>
    <string name="toast7">已提交成功</string>
    <string name="toast8">请选择评语</string>
    <string name="toast13">已驳回</string>
    <string name="toast9">头像上传成功</string>
    <string name="Toast09">未找到相机应用</string>
    <string name="temper1">体征</string>
    <string name="toast10">该学生未绑定相关设备</string>
    <string name="toast11">请输入批改内容再操作</string>
    <string name="toast14">请输入评语内容</string>
    <string name="Toast12">请输入评语内容</string>
    <string name="Toast13">请选择本次成绩打分</string>
    <string name="toast15">作业退回成功</string>
    <string name="location">校车位置刷新成功</string>
    <string name="dialog10_1">作业退回</string>
    <string name="dialog10_2">是否退回 %s 的作业？</string>
    <string name="dialog10_3">取消</string>
    <string name="dialog10_4">退回</string>
    <string name="toast16">已批改</string>
    <string name="eroot">网络异常,请检查网络后重试</string>
    <string name="auto2">点击停止录音</string>
    <string name="auto1">点击开始录音</string>
    <string name="toast17">暂无音频文件</string>
    <string name="bjchuper1">留言</string>
    <string name="bjchuper2">0条留言</string>
    <string name="barrier2">发送评论</string>
    <string name="mtext2">请输入评论内容</string>
    <string name="my4">用户协议</string>
    <string name="my5">隐私协议</string>
    <string name="public1">隐私协议</string>
    <string name="public0">用户协议</string>
    <string name="dialog1">个人信息保护指引</string>
    <string name="dialog3">暂不使用</string>
    <string name="dialog2">同意并进入</string>
    <string name="dialog4">欢迎使用"晴果科技"软件及相关服务！本指引将帮助您了解我们如何收集、处理个人信息。\n
        1.我们可能会申请存储权限，用于下载及缓存相关文件，可能会访问相机及相册，用于发帖时上传图片或视频，可能会申请系统设备权限收集设备信息，日志信息，用于推送和安全风控，您有权拒绝开启，拒绝授权不会影响App提供基本功能服务；\n
        2.为保障平台安全和运营安全以及推送、综合统计等目的所必须，我们会申请权限收集以下信息，如设备MAC地址、IMEI、已安装的应用列表等，未经您同意，我们不会从第三方获取，共享或提供您的信息； \n
        3.我们可能会申请位置权限，用于在提供天气服务，地图定位服务等，不会收集精确位置信息；\n
        "前往查看完整版 </string>
    <string name="dialog5">如果您同意，请点击下方按钮以接受我们的服务.</string>
    <string name="tm18">晴果智慧校园用户协议</string>
    <string name="tm1811">晴果智慧校园隐私权协议</string>
    <string name="back1">选择调课对象</string>
    <string name="back2">审批人/抄送人</string>
    <string name="newitem">新建事项</string>
</resources>