<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".UI.activity.viecode.activity_feedback">

    <com.cheergotech.widget.Backtitle
        android:id="@+id/backtitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        app:title_name="@string/fee1" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/send_post"
        android:layout_below="@+id/backtitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp10">

            <com.cheergotech.widget.widgetimage7
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                app:w7_msg1=""
                app:w7_msg2=""
                app:w7_name="@string/fee2" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/e11"
                android:hint="@string/fee3"
                android:maxLength="50"
                android:padding="@dimen/dp10"
                android:textColor="#ff929292"
                android:textSize="15sp" />

            <com.cheergotech.widget.widgetimage7
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                app:w7_msg1=""
                app:w7_msg2=""
                app:w7_name="@string/fee4" />


            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/e11"
                android:hint="@string/fee5"
                android:maxLength="32"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:padding="@dimen/dp10"
                android:textColor="#ff929292"
                android:textSize="15sp" />

            <com.cheergotech.widget.widgetimage7
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                app:w7_msg1=""
                app:w7_msg2=""
                app:w7_name="@string/fee6" />

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/e11"
                android:gravity="left|top"
                android:hint="@string/fee7"
                android:maxLength="200"
                android:maxLines="20"
                android:minLines="5"
                android:padding="@dimen/dp10"
                android:textColor="#ff929292"
                android:textSize="15sp" />

            <com.cheergotech.widget.widgetimage7
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                app:w7_msg1="最多上传3个附件，支持图片"
                app:w7_msg2=""
                app:w7_name="@string/fee8" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/send_post"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/s32"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/s32"
        android:layout_marginBottom="@dimen/dp10"
        android:background="@drawable/it325dp"
        android:gravity="center"
        android:padding="@dimen/dp10"
        android:text="@string/fee9"
        android:textColor="#ffffffff"
        android:textSize="17sp" />

</RelativeLayout>