<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/F8FAFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginTop="@dimen/dp5"
        android:layout_marginRight="@dimen/dp10"
        android:layout_marginBottom="@dimen/s5"
        android:background="@drawable/ite25dp"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp10"
                    android:text="xx 的请假申请"
                    android:textColor="#ff202020"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/createTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp10"
                    android:text="2022-04-16 07:20         "
                    android:textColor="#ff929dbb"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/status"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:background="@drawable/e333"
                android:gravity="center"
                android:padding="@dimen/s3"
                android:text="@string/toasth11"
                android:textColor="#ff0077ff"
                android:textSize="13sp" />

        </LinearLayout>

        <com.cheergotech.widget.widgetimage19
            android:id="@+id/className"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:w2_msg=""
            app:w2_name="@string/toasth10" />

        <com.cheergotech.widget.widgetimage19
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:w2_msg=""
            app:w2_name="@string/toasth8" />

        <com.cheergotech.widget.widgetimage19
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:w2_msg=""
            app:w2_name="@string/toasth7" />

        <com.cheergotech.widget.widgetimage19
            android:id="@+id/describes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:w2_msg="1天"
            app:w2_name="@string/toasth6" />


    </LinearLayout>

</LinearLayout>