<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_conner_white_line_20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dialog1"
            android:textColor="#000"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="6dp"
                android:breakStrategy="simple"
                android:lineSpacingMultiplier="1.3"
                android:text=""
                android:textColor="#000"
                android:textSize="13sp" />

        </ScrollView>

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="36dp"
            android:background="@drawable/shape_conner_system_20dp"
            android:gravity="center"
            android:text="@string/dialog2"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/dialog3"
            android:textColor="#666666"
            android:textSize="16dp" />


    </LinearLayout>


</LinearLayout>