<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@mipmap/bgtop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30">

            <ImageView
                android:id="@+id/phone_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/dp10"
                android:src="@mipmap/myhpone" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="124dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/phone_img"
                android:text=""
                android:textColor="#ffffffff"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:lines="1"
                android:text=""
                android:textColor="#ff9ed8ff"
                android:textSize="13sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:background="@drawable/momey_bg"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp10"
            android:paddingTop="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:paddingBottom="@dimen/dp20">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:padding="@dimen/s2"
                android:src="@mipmap/avasss" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:text=""
                android:textColor="#ff000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@drawable/it1"
                android:paddingLeft="@dimen/s5"
                android:paddingTop="@dimen/s2"
                android:paddingRight="@dimen/s5"
                android:paddingBottom="@dimen/s2"
                android:text="@string/temt1"
                android:textColor="#ffffffff"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></View>

            <LinearLayout
                android:id="@+id/line0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fment4"
                    android:textColor="#999"
                    android:textSize="13sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/rightback" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/momey_bg"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:gravity="center|left"
                android:padding="@dimen/dp10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/s16"
                    android:src="@mipmap/my1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/page5_t"
                    android:textSize="15sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/rightback" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/F8FAFF" />

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:gravity="center|left"
                android:padding="@dimen/dp10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/s16"
                    android:src="@mipmap/my2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/page5_t2"
                    android:textSize="15sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/rightback" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/F8FAFF"></View>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:gravity="center|left"
                android:padding="@dimen/dp10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/s16"
                    android:src="@mipmap/my3"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/page5_t3"
                    android:textSize="15sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></View>

                <TextView
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dbb"
                    android:textSize="@dimen/sp12" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/rightback" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/F8FAFF"></View>

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:gravity="center|left"
                android:padding="@dimen/dp10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/s16"
                    android:src="@mipmap/my4"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my4"
                    android:textSize="15sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dbb"
                    android:textSize="@dimen/sp12" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/rightback" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/F8FAFF"></View>

            <LinearLayout
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:gravity="center|left"
                android:padding="@dimen/dp10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/s16"
                    android:src="@mipmap/my5"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my5"
                    android:textSize="15sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dbb"
                    android:textSize="@dimen/sp12" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/rightback" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/s32"
        android:layout_marginRight="@dimen/s32"
        android:layout_marginBottom="@dimen/dp30"
        android:background="@drawable/it325dp"
        android:gravity="center"
        android:text="@string/t_ome"
        android:textColor="@color/white"
        android:textStyle="bold">

    </TextView>


</RelativeLayout>